--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
       "cordova-plugin-globalization": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-vibration": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-vibration": {}
     }
   },
   "dependencies": {
@@ -35,7 +34,6 @@
     "cordova-plugin-inappbrowser": "~1.7.1",
     "cordova-plugin-media-capture": "~1.4.3",
     "cordova-plugin-network-information": "~1.3.3",
-    "cordova-plugin-vibration": "~2.1.5",
-    "cordova-plugin-whitelist": "1.1.0"
+    "cordova-plugin-vibration": "~2.1.5"
   }
 }
